# Annado

./: .gitignore  README.md  package-lock.json  package.json
docs/: perf-inbox-rendering.md  tour.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  parser.rs  path_openers.rs  recurrence.rs  taskformat.rs  vault.rs
src/components/: BulkActions.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  ContextMenu.tsx  DatePickerPopover.tsx  DeadlinePicker.tsx  DeleteAffordance.test.tsx  DeleteIcon.tsx  ExpandedTaskCard.tsx  FilePathLabel.test.ts  FilePathLabel.tsx  FormatPickerModal.tsx  MarkdownNotesRenderer.tsx  MigrateRecurrenceModal.tsx  ModalShell.tsx  OpenFileButton.tsx  RecurringTaskModal.tsx  SettingsModal.tsx  Sidebar.tsx  SmartListModal.tsx  Sortable.tsx  TagEditor.test.tsx  TagEditor.tsx  TagSuggestions.tsx  TaskDetail.tsx  TaskItem.tsx  TaskList.tsx  VaultSelector.test.tsx  VaultSelector.tsx  WhenDatePicker.test.tsx  WhenDatePicker.tsx
src/contexts/: WikilinkNamesContext.tsx
src/hooks/: useConfirmableDelete.test.tsx  useConfirmableDelete.tsx  useKeyboardHandler.ts  usePanelState.ts  usePickerPosition.ts  useWikilinkProps.ts
src/stores/: filterTasks.test.ts  filterTasks.ts  filterTasksInherited.test.ts  taskStore.ts
src/test/: setup.ts
src/types/: task.ts
src/utils/: RenderTitleWithLinks.test.tsx  keybindings.ts  openMenuItems.ts  pathOpener.test.ts  pathOpener.ts  projectColors.ts  selection.test.ts  selection.ts  styles.ts  tagTree.test.ts  tagTree.ts  tags.test.ts  tags.ts  taskGrouping.test.ts  (+5 more)
(+15 files in other folders)
