[package]
name = "annado"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "annado_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
notify = { version = "7", features = ["macos_fsevent"] }
regex = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
parking_lot = "0.12"
path-opener = "0.5"
block2 = "0.6"
objc2 = "0.6"

